Try li color changes

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -9,9 +9,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "sass"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
